--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student/Alumni Management System</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="header">
-            <h1>Student/Alumni Management System</h1>
-            <p>Manage student and alumni records efficiently</p>
+            <h1>Student/Alumni Form</h1>
+            <p>The data you will provide will be used in OLOPSC Alumni Tracking System.</p>
+            <p>The purpose of this form is to ensure that the submittied entries in OATS are verified alumni of OLOPSC.</p>
+            <p>This will help us in creating a secured Alumni System for Our Lady of Perpetual Succor College.</p>
+            <p>Thank you!</p>
         </div>
 
         <!-- Authentication Status -->
@@ -123,6 +128,8 @@
 
     <!-- Firebase SDK -->
     <script src="index.js" type="module">
+
     </script>
 </body>
+
 </html>
