--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Student/Alumni Form</h1>
+            <h1>Alumni Form</h1>
             <p>The data you will provide will be used in OLOPSC Alumni Tracking System.</p>
             <p>The purpose of this form is to ensure that the submittied entries in OATS are verified alumni of OLOPSC.</p>
             <p>This will help us in creating a secured Alumni System for Our Lady of Perpetual Succor College.</p>
